# slack-composer

./: Procfile  README.md  slack-composer.cabal
src/: Main.hs
src/SlackComposer/: Amper.hs  CommandLineOptions.hs  Slack.hs  Types.hs
src/SlackComposer/Amper/: SimpleRender.hs
src/SlackComposer/Slack/: API.hs
test/: Spec.hs
